# Haskell

ueb09/: README.md  hie.yaml  package.yaml
ueb09/app/: Main.hs
ueb09/old/: guestbook.html  receipt.html
ueb09/src/: Types.hs  Website.hs
ueb09/templates/: meta.template  navbar.template  orderField.template
Übungen/ueb00/: ueb00.cabal
Übungen/ueb00/src/: Sum.hs
Übungen/ueb00/test/: UnitTest.hs
Übungen/ueb01/: .gitignore  BEWERTUNG.md  ueb01.cabal
Übungen/ueb01/src/: Primes.hs  Triangle.hs
Übungen/ueb01/test/: UnitTest.hs
Übungen/ueb02/: BEWERTUNG.md  ueb02.cabal
Übungen/ueb02/src/: Bill.hs  Coffee.hs
Übungen/ueb02/test/: UnitTest.hs
Übungen/ueb03/: .gitignore  BEWERTUNG.md  ueb03.cabal
Übungen/ueb03/src/: Convert.hs  SimpleRSA.hs
Übungen/ueb03/test/: UnitTest.hs
Übungen/ueb04/: BEWERTUNG.md  ueb04.cabal
Übungen/ueb04/src/: Banner.hs  CharMap.hs  FBox.hs
Übungen/ueb04/test/: UnitTest.hs
Übungen/ueb05/: BEWERTUNG.md  ueb05.cabal
Übungen/ueb05/src/: Bezirk.hs  Statistics.hs
Übungen/ueb05/test/: UnitTest.hs
Übungen/ueb06/: BEWERTUNG.md  ueb06.cabal
Übungen/ueb06/src/: TextIndex.hs  TextTree.hs
Übungen/ueb06/test/: UnitTest.hs
Übungen/ueb07/: BEWERTUNG.md  ueb07.cabal
Übungen/ueb07/src/: Beispielgraphen.hs  OptimizedGrphDB.hs  Planner.hs  SimpleGrphDB.hs  Visualizer.hs
Übungen/ueb07/test/: QuickCheckTest.hs  UnitTest.hs
Übungen/ueb08/: BEWERTUNG.md  ueb08.cabal
Übungen/ueb08/src/: Board.hs  ComputerPlayer.hs  FourConnect  FourConnect.hs  Game.hs
Übungen/ueb08/test/: TicTacToe.hs  UnitTest.hs
Übungen/ueb09/: BEWERTUNG.md  ChangeLog.md  stack.yaml  ueb09.cabal
Übungen/ueb09/app/: Main.hs
Übungen/ueb09/old/: index.html  order.html
Übungen/ueb09/src/: Types.hs  Website.hs
Übungen/ueb09/templates/: index.template  meta.template  nav.template  receipt.template
