name:                ueb06
version:             1.1
build-type:          Simple
cabal-version:       >=2.0

library
  exposed-modules:    TextTree TextIndex
  hs-source-dirs:     src
  build-depends:      base
  default-language:   Haskell2010

-- Unit test suite
test-suite unit
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        UnitTest.hs
  build-depends:  ueb06, base, tasty, tasty-hunit
