name:               ueb08
version:            1.0
build-type:         Simple
cabal-version:      >=2.0

executable four
  main-is:          FourConnect.hs
  other-modules:    Board Game ComputerPlayer 
  hs-source-dirs:   src
  build-depends:    base, containers, random
  default-language: Haskell2010

library
  exposed-modules:    Board Game ComputerPlayer
  hs-source-dirs:     src
  build-depends:      base, containers, random
  default-language:   Haskell2010

-- Unit test suite
test-suite unit
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        UnitTest.hs
  other-modules:  TicTacToe
  build-depends:  ueb08, base, containers, tasty, tasty-hunit

